--- a/package.json
+++ b/package.json
@@ -1,43 +1,34 @@
 {
   "name": "guildhall",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.47",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
-  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "turbo run build",
+    "test": "trubo run test",
+    "lint": "turbo run lint",
+    "dev": "turbo run dev",
+    "semantic-release": "semantic-release"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "commitlint-config-gitmoji": "^2.2.5",
+    "conventional-changelog": "^3.1.25",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "turbo": "^1.4.6",
+    "semantic-release": "^19.0.5"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paveda/guildhall.git"
+  },
+  "bugs": {
+    "url": "https://github.com/paveda/guildhall/issues"
+  },
+  "homepage": "https://github.com/paveda/guildhall#readme",
+  "version": "0.0.0-development"
 }
